zeit.cms changes
================

1.19.6 (unreleased)
-------------------

- Sichergestellt, dass immer nur genau ein Tooltip angezeigt wird. Tooltips
  werden nicht angezeigt, wenn eine DragAndDrop-Operation durchgeführt wird.

1.19.5 (2009-05-08)
-------------------

- TooltipMangager hinzugefügt, der den Tooltip-Text vom jeweiligen DOM-Element
  holt.

1.19.4 (2009-05-07)
-------------------

- Korrektes Verwenden des DAV-Such-Interfaces (repaiert Adaptieren eines
  UUID-Objektes auf ICMSContent liefert das Objekt zur UUID).

1.19.3 (2009-05-07)
-------------------

- Test-Basisklasse zeit.cms.testing.FunctionalTestCase hinzugefügt.

- Hilfsfunktion um beliebigen Ordner in Abhängigkeit von der aktuellen Ausgabe
  zu bekommen.

- Adaptieren eines UUID-Objektes auf ICMSContent liefert das Objekt zur UUID.

1.19.2 (2009-04-30)
-------------------

- Test-Hilfsfunktionen zeit.cms.testing ``set_site()`` und
  ``create_interaction()`` eingeführt.

- DragAndDrop von Content-Objekten refaktoriert, so dass unterscheidbar ist, ob
  ein Content-Objekt, oder etwas anderes gezogen wird.

1.19.1 (2009-04-29)
-------------------

- DragAndDrop aus Dateilisten und der Suche funktioniert wieder (fixes #5057).

1.19 (2009-04-23)
-----------------

- zeit.today in ein extra Paket verschoben.

- Hilfsfunktion zum korrekten "dragbar" machen von Boxen, die sich auf ein
  Content-Objekt beziehen.

1.18.2 (2009-04-21)
-------------------

- Lightbox verwendet keine DIVs mit id mehr. Dies ermöglicht mehrere Lightboxen
  auf der selben Seite.

1.18.1 (2009-04-17)
-------------------

- UUIDs leben jetzt in ``{http://namespaces.zeit.de/CMS/document}uuid`` und 
  haben das Format ``{urn:uuid:3acb7948-9c83-439b-90ce-98426541ca80}``.

1.18 (2009-04-16)
----------------

- Beim öffnen des CMS wird den aktuellen Online-Arbeitsordner weitergeleitet
  (fixes #4995).

- UUIDs aben jetzt »ZEDE-« vorangestellt.


1.17.1 (2009-04-15)
-------------------

- LightboxForm kann neu geladen werden.
